--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,27 @@
-version: '2'
+helpy:
+  #build: .
+  image: derdiedasjojo/helpyio-docker
+  restart: always
+  volumes:
+    - /helpy/public
+  environment:
+    - POSTGRES_DB=helpy_production
+    - POSTGRES_USER=helpy
+    - POSTGRES_PASSWORD=some_secure_pg_password_change_in_production
+    - SECRET_KEY_BASE=some_secret_key_base_change_in_production
+      #- DO_NOT_PREPARE=true
+  ports:
+    - "8001:8080"
+  links:
+    - postgres:postgres
 
-services:
-  frontend:
-    image: webwurst/caddy
-    volumes:
-      - ./docker/Caddyfile:/etc/caddy/Caddyfile
-      - ./certs:/etc/caddy/certs
-    volumes_from:
-      - helpy:ro
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - front
-    restart: always
-    depends_on:
-      - helpy
-  helpy:
-    image: helpy/helpy
-    restart: always
-    networks:
-      - front
-      - back
-    volumes:
-      - rails-assets:/helpy/public
-    env_file: docker/.env
-    #environment:
-    #  - DO_NOT_PREPARE=true
-    depends_on:
-      - postgres
-  postgres:
-    image: postgres:9.4
-    restart: always
-    networks:
-      - back
-    env_file: docker/.env
-    volumes:
-      - ./postgres:/var/lib/postgresql/data
-
-volumes:
-  rails-assets:
-    driver: local
-
-networks:
-  front:
-    driver: bridge
-  back:
-    driver: bridge
+postgres:
+  image: postgres:9.4
+  restart: always
+  environment:
+    - POSTGRES_DB=helpy_production
+    - POSTGRES_USER=helpy
+    - POSTGRES_PASSWORD=some_secure_pg_password_change_in_production
+    - SECRET_KEY_BASE=some_secret_key_base_change_in_production
+  volumes:
+    - /home/core/dockerdata/postgres:/var/lib/postgresql/data
