--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -1,21 +1,17 @@
-0.0.0.0:80 {
+0.0.0.0:8001 {
   tls off
   root /helpy/public
 
   header /assets {
-    gzip
     Expires "Thu, 31 Dec 2037 23:55:55 GMT"
     Cache-Control public
   }
 
-  header /uploads
-
-  proxy / helpy:8080/ {
+  proxy / localhost:8080/ {
     except /assets
-    except /uploads
-    header_upstream Host {host}
-    header_upstream X-Real-IP {remote}
-    header_upstream X-Forwarded-Proto {scheme}
+    proxy_header Host {host}
+    proxy_header X-Real-IP {remote}
+    proxy_header X-Forwarded-Proto {scheme}
   }
   log stdout
 }
