--- a/docker/database.yml
+++ b/docker/database.yml
@@ -20,4 +20,4 @@ production:
   host: postgres
   database: <%= ENV['POSTGRES_DB'] %>
   username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>d
